// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown can focus dropdown and select option 1`] = `
500;700;900&display=swap'); .c0 {
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: 0.5rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxjAm c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="c2"
      >
        Charmander
      </div>
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown can use arrow keys and enter to navigate options 1`] = `
500;700;900&display=swap'); .c0 {
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: 0.5rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxjAm c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="c2"
      >
        Charmander
      </div>
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown closes options when clicking outside 1`] = `
<DocumentFragment>
  500;700;900&display=swap'); .c0 {
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: 0.5rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c4 {
  background: white;
  position: absolute;
  max-height: 10rem;
  overflow-y: scroll;
  width: 15rem;
  border: 0.5px solid rgba(211,214,215,0.25);
}

.c5 {
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:focus,
.c5:hover {
  background: rgba(211,214,215,0.5);
  cursor: pointer;
  outline: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 0.2rem;
  width: 2rem;
}

<div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxjAm c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,15L12,10L17,15H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
    <div
      class="c4"
    >
      <div
        class="c5"
        id="choosePokemon-option-Bulbasaur"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Bulbasaur
        </span>
      </div>
      <div
        class="c5"
        id="choosePokemon-option-Charmander"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Charmander
        </span>
      </div>
      <div
        class="c5"
        id="choosePokemon-option-Squirtle"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Squirtle
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown closes options when clicking outside 2`] = `
<DocumentFragment>
  500;700;900&display=swap'); .c0 {
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: 0.5rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxjAm c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Dropdown deselects option when clicking on them twice when dropdown is multi 1`] = `
500;700;900&display=swap'); .c0 {
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: 0.5rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxjAm c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown displays all options when focused 1`] = `
500;700;900&display=swap'); .c0 {
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: 0.5rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c4 {
  background: white;
  position: absolute;
  max-height: 10rem;
  overflow-y: scroll;
  width: 15rem;
  border: 0.5px solid rgba(211,214,215,0.25);
}

.c5 {
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:focus,
.c5:hover {
  background: rgba(211,214,215,0.5);
  cursor: pointer;
  outline: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 0.2rem;
  width: 2rem;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxjAm c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,15L12,10L17,15H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
    <div
      class="c4"
    >
      <div
        class="c5"
        id="choosePokemon-option-Bulbasaur"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Bulbasaur
        </span>
      </div>
      <div
        class="c5"
        id="choosePokemon-option-Charmander"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Charmander
        </span>
      </div>
      <div
        class="c5"
        id="choosePokemon-option-Squirtle"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Squirtle
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown does not display options on initial render 1`] = `
500;700;900&display=swap'); .c0 {
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: 0.5rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxjAm c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown selects multiple options when dropdown is multi 1`] = `
500;700;900&display=swap'); .c0 {
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: 0.5rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxjAm c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="c2"
      >
        Charmander, Squirtle
      </div>
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown selects options from values prop 1`] = `
500;700;900&display=swap'); .c0 {
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: 0.5rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxjAm c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="c2"
      >
        Bulbasaur, Charmander
      </div>
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;
